# bookstore

./: Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: build.yml  workflow-pr.yml
api/: admin.py  apps.py  models.py  tests.py  views.py
bookstore/: settings.py  urls.py  views.py
order/: apps.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/tests/: test_order.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/migrations/: 0001_initial.py
product/models/: category.py  product.py
product/tests/: test_category.py  test_product.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: product_viewset.py
